fix all ts and eslint errors

--- a/src/content/posts/updating-state-with-a-component/index.mdx
+++ b/src/content/posts/updating-state-with-a-component/index.mdx
@@ -10,7 +10,7 @@ relatedPostsSlugs:
   ['renderless-components', 'how-to-use-react-context-effectively']
 ---
 
-import Example from './_Example'
+import Example from './_Example.astro'
 
 Have you ever wanted to create a component like `Head` from `next/head` or `Helmet` from `react-helmet` that would update some state by using the `children` of a component? It's simpler than you might think.
 
