--- a/src/content/posts/using-react-memo-to-avoid-unnecessary-rerenders/index.mdx
+++ b/src/content/posts/using-react-memo-to-avoid-unnecessary-rerenders/index.mdx
@@ -227,8 +227,8 @@ Suppose we _must_ pass an object into a component, and we know that often these 
 ```javascript
 const personsAreEqual = (prevProps, nextProps) => {
   return (
-    prevProps.name === nextProps.name &&
-    prevProps.location === nextProps.location
+    prevProps.person.name === nextProps.person.name &&
+    prevProps.person.location === nextProps.person.location
   )
 }
 
