--- a/src/content/posts/wrangling-tuple-types/index.mdx
+++ b/src/content/posts/wrangling-tuple-types/index.mdx
@@ -41,7 +41,7 @@ Returning a tuple is a nice API because it allows the consumer of the `result` t
 const [isOpen, setIsOpen] = useBool()
 ```
 
-That it is to do the object equivalent:
+Than it is to do the object equivalent:
 
 ```typescript
 const { state: isOpen, handlers: setIsOpen } = useBool()
