--- a/src/content/posts/make-your-own-charts-in-react-without-a-charting-library-part-1/index.mdx
+++ b/src/content/posts/make-your-own-charts-in-react-without-a-charting-library-part-1/index.mdx
@@ -1,9 +1,11 @@
 ---
-tags: ['React', 'Data Visualization', 'SVG']
 date: '2017-06-24T00:00:00.000Z'
 slug: 'make-your-own-charts-in-react-without-a-charting-library'
 title: 'Make Your Own Charts in React Without a Charting Library'
+tags: ['React', 'Data Visualization', 'SVG']
 ---
+
+import { ExampleBarChart } from './_BarChart'
 
 Occasionally I see someone ask, "What's the best way to make bar charts with React? Are there any great libraries?" I often respond with, "Why not build it with React yourself?"
 
@@ -140,10 +142,10 @@ const BarChart = ({ data }) => {
 }
 ```
 
-And there you have it, a very simple to make bar chart. Take a look and play with the chart below:
+And there you have it, a very simple to make bar chart. Check out a rendering of our bar chart below:
 
-<iframe
-  src="https://codesandbox.io/embed/oQGjvR6ZK"
-  style="width:100%; height:500px; border:0; border-radius: 4px; overflow:hidden;"
-  sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
-></iframe>
+<OffsetWrap>
+  <div class="flex justify-center">
+    <ExampleBarChart client:load />
+  </div>
+</OffsetWrap>
