--- a/src/content/posts/no-outer-margin-or-padding/index.mdx
+++ b/src/content/posts/no-outer-margin-or-padding/index.mdx
@@ -1,9 +1,9 @@
 ---
 date: '2024-02-26T16:13:32.267Z'
-slug: 'anti-pattern-outer-margin-padding'
-title: 'Anti-pattern: Outer <code>margin</code> or <code>padding</code> on reusable UIs'
+slug: 'no-outer-margin'
+title: 'No Outer <code>margin</code>'
 subtitle: null
-description: ''
+description: "It is an anti-pattern to add margin to the outermost element of a component. It breaks encapsulation and makes components difficult to reuse. Let's learn what to do instead."
 excerpt: null
 tags: ['React', 'CSS', 'Reusability', 'Anti-patterns']
 relatedPostsSlugs: []
