--- a/src/content/posts/no-outer-margin-or-padding/index.mdx
+++ b/src/content/posts/no-outer-margin-or-padding/index.mdx
@@ -77,7 +77,7 @@ The impact of these styles often lead to what I call "compensations", essentiall
 
 Not only do outer `margin`s require compensations, they give the underlying component too many responsibilities. External spacing should **never** be the responsibility of a component. Components should only ever be concerned with internal spacing.
 
-### An example
+### An abstract example
 
 Let's say I have a reusable component called `Item` that looks like this:
 
@@ -155,6 +155,35 @@ Or a `Grid`?
 Are you going to make boolean props for all the margins? I sure hope
 not!
 
+### A concrete example
+
+One of the most common ways I see this with headings. Let's say I have a component for `H2`s in my codebase:
+
+```jsx
+function H2({ children }) {
+  return <h2 className="mb-4 text-xl font-bold">{children}</h2>
+}
+```
+
+That looks like this:
+
+<div class="my-4 bg-gray-100 px-4 py-2 dark:bg-gray-800">
+  <h2 className="mb-4 text-xl font-bold">
+    Using the <code>h2</code>. Notice the space below.
+  </h2>
+</div>
+
+This might seem like a good idea. Headings tend to be in large blocks of text. But what if you want to add metadata around it? What if it's the title of a blog post and you need to put a subtitle right below it, or a date, or timestamp?
+
+<div class="my-4 bg-gray-100 px-4 py-2 dark:bg-gray-800">
+  <h2 className="mb-4 text-xl font-bold">
+    Using the <code>h2</code>
+  </h2>
+  <div class="font-sans text-lg">Uh oh. I'm spaced really far away!</div>
+</div>
+
+Now you're back-pedaling to either undo the `mb-4` class or compensate for it some other way. Better to leave it off entirely and do the proper solution, which we'll discuss next.
+
 ### The solution
 
 The solution to this problem is simple, use parent elements or components for layout and spacing.
@@ -186,6 +215,8 @@ And our `Grid` looks like this:
   <div class="rounded bg-pink-500 p-8" />
   <div class="rounded bg-orange-400 p-8" />
 </div>
+
+No matter where we need to put our `Item`, we know we can control how it's laid out in our UI. We've fixed its encapsulation problem and made it more reusable.
 
 ### Summary
 
