update post layout with work with agathist component

--- a/src/content/posts/no-outer-margin-or-padding/index.mdx
+++ b/src/content/posts/no-outer-margin-or-padding/index.mdx
@@ -11,7 +11,7 @@ relatedPostsSlugs: []
 
 Building reusable components can be challenging to do well, and there are some anti-patterns that are easy to fall into that can make it even more difficult.
 
-One of the most common antipatterns I see is having `margin` (and in some cases, `padding`) on the outermost element of a component. This is an easy mistake to make, but luckily, it's easily avoided once we know what we're looking for.
+One of the most common antipatterns I see is having `margin` (and in some cases `padding`) on the outermost element of a component. This is an easy mistake to make, but luckily, it's easily avoided once we know what we're looking for.
 
 ### What are "outer" `margin`s and `padding`s?
 
