--- a/src/content/posts/agathist-q-and-a/index.mdx
+++ b/src/content/posts/agathist-q-and-a/index.mdx
@@ -21,9 +21,9 @@ The word "agathist" is derived from the Greek word _agathos_, which means "the g
 
 ### When did you come up with the idea to start Agathist?
 
-I first conceived of Agathist in 2017. I bought the domain [agath.ist](https://agath.ist) because I thought the name was perfect for company. It rolls of the tongue. It doesn't hurt that the top level domain for Istanbul is `.ist`. That was icing on the cake.
+I first conceived of Agathist in 2017. I bought the domain [agath.ist](https://agath.ist) because I thought the name was perfect for a company. It rolls off the tongue. It doesn't hurt that the top level domain for Istanbul is `.ist`. That was the icing on the cake.
 
-I even made a placeholder page for it as if I was starting an agency back then. Up to that point I had only worked at agencies, so it was what I knew. But I never did anything with the site other than renew the domain.
+I even made a placeholder page for it back then, as if I was starting an agency. Up to that point in my career, I had _only_ worked at agencies, so it was what I knew. But I never did anything with the site other than renew the domain each year.
 
 I didn't start seriously considering starting a software development firm as a career option until last fall. In November, I had a revelation regarding work and realized that it was extremely unlikely for me to find a Goldilocks job where I could thrive, working with my neurodivergence and not against it. The only way I could do that would be to take a chance on myself and start my own company.
 
@@ -50,7 +50,7 @@ That might sound hyperbolic, but it's so difficult to work under the power struc
 
 By taking ownership, I can at least flip some of those structures in my favor and put more of my energy where I want it to go. While it might not be the most financially sensible move, <Marker content="It might be a great move, too. Time will tell." /> it does give me the best opportunity to create structures that work for me rather than against me.
 
-I also hope to get back to learning and growing. My last job was a poor fit in this regard. It was quagmired. I spent all of my energy pouring into others, trying to build up their skills so we could move forward. No one was pouring into me and there were no opportunities for growth. I became stuck as well. Starting Agathist is part of my journey to getting out of that muck.
+I also hope to get back to learning and growing. My last job was a poor fit in this regard. It was a quagmire. I spent all of my energy pouring into others, trying to build up their skills so we could move forward. No one was pouring into me and there were no opportunities for growth. I became stuck as well. Starting Agathist is part of my journey to getting out of that muck.
 
 For right now, I'm specifically excited to ramp up on some of the new trends in web development, like React Server Components. I'm also excited about the opportunity to spend more time doing fullstack work for clients, becoming more skilled with Postgres, SQL and other backend skills.
 
@@ -58,35 +58,37 @@ In addition, I suspect that as Agathist grows, my role within it will change, to
 
 ### What kind of projects are you looking for?
 
-I'm open to a lot of ideas! My career has had me work on so many different things, I genuinely could help out on a web (or React Native) project in so many ways. Here are a few ways I'm focusing on right now:
+I'm open to a lot of ideas! My career has allowed me to work on so many different things, such that I genuinely believe I could help out on any web (or React Native) project in so many ways. Here are a few ways I'm focusing on right now:
 
 #### **Fullstack applications**
 
-I'd love to land some bigger applications with some bigger companies. Projects with some real meat to them. I actually love working on product in the early stages, where there's lots of work to get done and you can really just put your head down and go. Let us build your version 1.0, get you rolling.
+I'd love to land some bigger applications with some bigger companies. <Marker content="Who wouldn't, right?!" /> Projects with some real meat to them. I actually love working on product in the early stages, where there's lots of work to get done and you can really just put your head down and go. Let us take your idea and build version 1.0. Get you rolling.
 
 #### **Codebase improvement**
 
-I'm thinking of this as "Refactor as a Service". Every place I've worked has needed lots of love. I'm skilled at revitalizing legacy code and making it pleasurable to work in. I'd be happy to bring that to a project.
+I'm thinking of this as "Refactor as a Service". Every place I've ever worked has needed lots of love. I'm skilled at revitalizing legacy code and making it pleasurable to work in. I'd be happy to bring that to a project.
 
-In addition, I've been approached a couple times now to do "Revamp as a Service", too. If you have a older website that just needs to be ported to something more modern, let us do that. We can set you up on a modern stack you're happy with, with better, faster DX and get you back on the happy path.
+In addition, I've been approached a couple times now to do "Revamp as a Service", too. If you have an older website that just needs to be ported to something more modern, let us do that. We can set you up on a modern stack you're happy with, with a better developer experience, and get you back on the happy path.
 
 #### **Design systems**
 
-I've spent the last 10 years working in React and the last 2 building a design system that supports React and React Native. If you're team has been looking to build one of these but doesn't know how, or just needs help getting started, I'd love to help.
+I've spent the last 10 years working in React and the last 2 years building a design system that supports both React and React Native. In other words, I know a thing or two about building really great component systems.
+
+If you're team has been looking to build one of these but doesn't know how, or just needs help getting started, I'd love to help.
 
 ### Is anyone else on the team with you?
 
-Yes! Right now one of my best friends is working with me. <Marker content="I am so excited!" /> This way we'll have enough hands and minds to take on some bigger projects. I'll add subcontractors as necessary this year and hopefully will be able to hire some as full-time employees when the time comes.
+Yes! Right now one of my best friends is working with me. <Marker content="I am so excited!" /> This way we'll have enough hands and minds to take on some bigger projects. I'll add subcontractors as necessary this year and hopefully be in a position to hire some as full-time employees when the time comes.
 
 ### What are Agathist's rates?
 
-Good question! The truth is you can't have one rate for all clients. You need to optimize it for value. Bigger companies, bigger projects that bring in bigger revenues, they're worth more value and thus the rate should be higher to match that value.
+Good question! The truth is you can't have one rate for all clients. You need to optimize your rate for value. Bigger companies, bigger projects that bring in bigger revenues, they're worth more value to the client, and thus the rate should be higher to match that value.
 
-That said, I'm a very transparent person, <Marker content="A trait that is <em>also</em> related to my neurodivergence. Yay, oversharing!" /> I'm starting my bids at $125/hour and shooting for no more than 40 hours per week _split_ between my colleague and me. I want to keep our workload very reasonable and give myself ample time pursue new clients and grow the business. I can't do that if I'm full-time coding.
+That said, I'm a very transparent person, <Marker content="A trait that is <em>also</em> related to my neurodivergence. Yay, oversharing!" /> I'm starting my bids at $125/hour and shooting for no more than 40 hours per week _split_ between my colleague and me. I want to keep our workload very reasonable and give myself ample time to pursue new clients and grow the business. I can't do that if I'm full-time coding.
 
 I suspect our rates will go up a bit as we obtain clients, so if you're reading this in the future, don't be surprised if they're higher. Please keep in mind, rates aren't only for making money, they are a tool for managing workload and that's really important to me.
 
-Lastly, I have no interest in gouging people. I'm not really wired to treat money as king. I'm wired to do things well and to do things right. I want to take on projects that interest me (and my team) _and_ make business sense for both me and the client. That won't always mean going with the company that can pay the most!
+Lastly, I have no interest in gouging people. I'm not really wired to treat money as king. I'm wired to do things well and to do things right. I want to take on projects that interest me (and my team) _and_ make business sense for both the client and us. That won't always mean going with the company that can pay the most!
 
 ### How can I get in touch with Agathist about a project?
 
@@ -96,7 +98,7 @@ That said, you can fill out the form on [the contact page](https://agath.ist/con
 
 If forms aren't your style, you can also send me an email at [kyle@agath.ist](mailto:kyle@agath.ist). I'd be happy to discuss it there.
 
-If you're really adventurous, you can click the Agathist ads you see around here, too. That will lead you in the right direction.
+Lastyl, if you're really adventurous, you can click the Agathist ads you see around here, too. That will lead you in the right direction.
 
 ### How can I help Agathist be successful?
 
@@ -104,16 +106,16 @@ I think the simplest thing you can do is think of us when an opportunity present
 
 Have a project at work you really want to see happen but don't have the headcount for? Consider Agathist.
 
-Our main hurdle at the moment is landing those first clients. Once the ball is rolling, we'll have new, exciting challenges to deal with.
+Our main hurdle right now is landing those first clients. Once the ball is rolling, we'll have new, exciting challenges to deal with.
 
-Other ways you can help out include:
+Other ways you can help us out include:
 
 - Sharing this post
 - Sharing the [Agathist website](https://agath.ist)
-- Write a testimonial if we've worked together
+- Writing a testimonial if we've worked together
 
 There are probably even more ways I'm not thinking of right now. Be creative!
 
 ### How are you going to conclude this Q&A?
 
-By saying thank you. Thank you to the people who believe that I can do this. Thank you to the mentors helping me learn some lessons the easy way, rather than the hard way. And thank you to the network of wonderful people I have that makes this a possibility. I appreciate every one of you.
+By saying thank you. Thank you to the people who believe that I can do this. Thank you to the mentors helping me learn some lessons the easy way, rather than the hard way. And thank you to the network of wonderful people I have that makes this a possibility. I appreciate each and every one of you.
