--- a/src/content/posts/agathist-q-and-a/index.mdx
+++ b/src/content/posts/agathist-q-and-a/index.mdx
@@ -98,7 +98,7 @@ That said, you can fill out the form on [the contact page](https://agath.ist/con
 
 If forms aren't your style, you can also send me an email at [kyle@agath.ist](mailto:kyle@agath.ist). I'd be happy to discuss it there.
 
-Lastyl, if you're really adventurous, you can click the Agathist ads you see around here, too. That will lead you in the right direction.
+Lastly, if you're really adventurous, you can click the Agathist ads you see around here, too. That will lead you in the right direction.
 
 ### How can I help Agathist be successful?
 
