--- a/src/content/posts/two-types-of-composition/index.mdx
+++ b/src/content/posts/two-types-of-composition/index.mdx
@@ -3,10 +3,10 @@ date: '2024-03-12T15:23:44.811Z'
 slug: 'two-types-of-composition'
 title: 'Two Types of Composition'
 subtitle: null
-description: ''
+description: 'Not only is "composition" a confusing word, but there is more than one way to do it. Let&apos;s break those ways down into two types and learn about "nesting composition" versus "merging composition".'
 excerpt: null
-tags: ['JavaScript', 'TypeScript']
-relatedPostsSlugs: []
+tags: ['JavaScript', 'TypeScript', 'Software Engineering']
+relatedPostsSlugs: ['just-enough-fp-composition']
 ---
 
 import { Button } from '../../../components/Button.tsx'
