--- a/src/content/posts/agathist-vscode-themes/index.mdx
+++ b/src/content/posts/agathist-vscode-themes/index.mdx
@@ -1,9 +1,9 @@
 ---
 date: '2024-03-16T16:55:07.698Z'
 slug: 'agathist-vscode-themes'
-title: 'Agathist Vscode Themes'
+title: 'Agathist VSCode Themes'
 subtitle: null
-description: ''
+description: "I created a VSCode theme inspired by Agathist's brand colors and released it as a VSCode Extension."
 excerpt: null
 tags: ['VSCode']
 relatedPostsSlugs: []
